--- a/lab7-pogoda/style.css
+++ b/lab7-pogoda/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: "Montserrat";
+  overflow-x: hidden;
 }
 
 body {
@@ -40,6 +41,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 1em;
+  padding: 0 0 3em 0;
 }
 .weather-city {
   width: calc(70% - 6em);
