--- a/lab7-pogoda/style.scss
+++ b/lab7-pogoda/style.scss
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: "Montserrat";
+	overflow-x: hidden;
 }
 body {
 	background-color: rgb(39, 37, 37);
@@ -33,6 +34,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	gap: 1em;
+	padding: 0 0 3em 0;
 	&-city {
 		width: calc(70% - 6em);
 		padding: 1em 3em;
