--- a/lab7-pogoda/style.scss
+++ b/lab7-pogoda/style.scss
@@ -10,7 +10,9 @@ body {
 }
 .search {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	width: 100vw;
 	&-bar {
 		width: 80%;
@@ -44,6 +46,9 @@ body {
 		flex-wrap: wrap;
 		justify-content: space-around;
 		align-items: center;
+		gap: 1em;
+		text-align: center;
+
 		&-name {
 			width: 100%;
 			flex-basis: 100%;
@@ -53,5 +58,38 @@ body {
 			font-weight: bold;
 			margin-bottom: 1em;
 		}
+		&-wind,
+		&-description {
+			text-align: left;
+		}
+		& > * {
+			&:first-letter {
+				text-transform: uppercase;
+			}
+		}
 	}
+}
+.btn {
+	background-color: none;
+	border: none;
+	width: 100px;
+	cursor: pointer;
+	&-delete {
+		color: rgb(147, 39, 39);
+		font-size: large;
+		font-weight: bold;
+		background-color: transparent;
+	}
+	&-light {
+		color: rgb(205, 200, 200);
+	}
+}
+.error {
+	background-color: rgb(147, 39, 39);
+	color: rgb(205, 200, 200);
+	padding: 1em;
+	font-size: 0.8em;
+}
+.deleted {
+	opacity: 0;
 }
